--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 	margin: 0;
 	padding: 0;
 	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -18,8 +17,12 @@ margin-top: 60px;
 .navTopContainer {
  	padding: 0% 10%;
  	width: 100%;
+ 	display: -webkit-box;
+ 	display: -ms-flexbox;
  	display: flex;
- 	justify-content: center;
+ 	-webkit-box-pack: center;
+ 	    -ms-flex-pack: center;
+ 	        justify-content: center;
  	background-color: #2c6ccc;
  	position: fixed;
  	top: 0;
@@ -36,8 +39,12 @@ nav {
     
 	width: 100%;
 	background-color: #2c6ccc;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;	
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;	
 }
 
 #brand {
@@ -49,9 +56,15 @@ nav p a{
 	color: #fff;
 	float: left;
 	line-height: 1.5;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	font-family:Poppins;
 	font-weight: 400;
   	font-size: 18px;
@@ -59,20 +72,40 @@ nav p a{
 }
 
 .desktopView {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: flex-start;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 
 }
 
 
 .active {
 
+	display: -webkit-box;
+
+	display: -ms-flexbox;
+
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 
 }
 
@@ -166,16 +199,31 @@ nav ul li a i {
 	width: 1170px;
 	padding: 0px 15px;
 	margin: 0 auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
+
+/*#displayNone {
+	display: none;
+}*/
+
+/*.toggle {
+   height: 0;
+   visibility: hidden;
+   width: 0;
+}*/
 
 .toggle {
 	width: 100%;
 	padding: 10px 10px;
 	background-color: #2c6ccc;
 	text-align: right;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	color: #fff;
 	font-size: 30px;
 	display: none;
@@ -196,11 +244,19 @@ nav ul li a i {
 @media only screen and (max-width: 600px) {
 
 	.toggle {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: space-between;
-		align-items: center;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		width: 100%;
 		border-bottom: 1px white solid;
+		/*height: auto;*/
+		/*isibility: visible;*/
 	}
 
 	.toggle a {
@@ -208,9 +264,15 @@ nav ul li a i {
 		color: #fff;
 		float: left;
 		line-height: 1.5;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: center;
-		align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		font-family:Poppins;
 		font-weight: 400;
 	  	font-size: 22px;
@@ -224,10 +286,19 @@ nav ul li a i {
 
 
 	nav {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		height: auto;
 		width: 100%;
 
@@ -283,10 +354,19 @@ nav ul li a i {
 	.active {
 		padding: 0px 40px;
 		width: 100%;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: flex-start;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-pack: start;
+		    -ms-flex-pack: start;
+		        justify-content: flex-start;
+		-webkit-box-align: start;
+		    -ms-flex-align: start;
+		        align-items: flex-start;
 		height: auto;
 	}
 
@@ -305,7 +385,8 @@ nav ul li a i {
 
 	.under65List a:before , .medicareList a:before, .moreInfoList a:before {
 		margin-left: 10px;
-		text-decoration:;
+		-webkit-text-decoration:;
+		        text-decoration:;
 		list-style-type: square; 
 		content: "❯ ";
   		text-decoration: none;
@@ -361,7 +442,9 @@ h4 {
 
 .h2text {
 	margin-bottom: 15px;
-	align-self: center;
+	-ms-flex-item-align: center;
+	    -ms-grid-row-align: center;
+	    align-self: center;
 }
 
 h3 {
@@ -449,16 +532,29 @@ hr {
 }
 
 .wholeSection {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 100%;
 }
 
 .row {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	/*align-items: center;*/
 	margin-bottom: 10px;
 	padding: 15px 10px 10px 10px;
@@ -510,10 +606,19 @@ hr {
 	padding-left: 10px;
 	width: 100%;
 	height: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 
@@ -521,25 +626,47 @@ hr {
 	padding-right: 10px;
 	width: 100%;
 	height: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 
 
 .showcase-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin-bottom: 15px;
 }
 
 .groupingBtn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-start;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 
 #resources {
@@ -548,17 +675,24 @@ hr {
 
 .imgContainer {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	-ms-align-items: center;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .imgMDPlans {
 	width: 90%;
 	margin-left: 30px;
 	border-radius: 10px;
-	box-shadow: 8px 8px 10px #aaaaaa;
+	-webkit-box-shadow: 8px 8px 10px #aaaaaa;
+	        box-shadow: 8px 8px 10px #aaaaaa;
 	vertical-align: middle;
 	border: 0px;
 }
@@ -568,7 +702,8 @@ hr {
 	width: 80%;
 	margin-left: 30px;
 	border-radius: 10px;
-	box-shadow: 8px 8px 10px #aaaaaa;
+	-webkit-box-shadow: 8px 8px 10px #aaaaaa;
+	        box-shadow: 8px 8px 10px #aaaaaa;
 	vertical-align: middle;
 	border: 0px;
 }
@@ -600,10 +735,17 @@ h2 a i {
 form {
 	height: 200px;
 	width: 350px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	text-align: center;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	/*align-items: center;*/
 
 }
@@ -635,6 +777,8 @@ input:focus, textarea:focus {
 	padding: 5px 8px;
 	color: #2c6ccc;
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 
 	    height: 34px;
@@ -647,8 +791,12 @@ input:focus, textarea:focus {
 
 	    border-radius: 4px;
 
-	        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);rgba(0,0,0,.075);
+	        /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+	    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	    transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
 }
 
 
@@ -660,7 +808,8 @@ input:focus, textarea:focus {
 		border: white 1px solid;
 		font-size: 16px;
 		padding: 5px 10px;
-		align-self: flex-end;
+		-ms-flex-item-align: end;
+		    align-self: flex-end;
 		width: 30%;
 		border-radius: 5px;
 		text-align: center;
@@ -682,19 +831,36 @@ input:focus, textarea:focus {
 }
 
 .contactFooterContainer {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 75%;
 	height: 100%;
 }
 
 .contactInfo {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	background-color: #878787;
 	background-color: rgba(44, 108, 204, 0.9);
 	width: 600px;
@@ -735,11 +901,13 @@ i {
 
 #contactName {
 	width: 80%;
-	align-self: flex-start;
+	-ms-flex-item-align: start;
+	    align-self: flex-start;
 }
 #contactPhone {
 	width: 80%;
-	align-self: flex-end;
+	-ms-flex-item-align: end;
+	    align-self: flex-end;
 }
 
 #contactEmail {
@@ -761,23 +929,35 @@ label {
 
 
 input {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: auto;
 	margin: 0;
 }
 
 .form-group {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 
 footer{
   padding: 5px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #copyrightText {
@@ -806,9 +986,15 @@ footer{
 	}
 
 	.contactFooterContainer {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: space-between;
-		align-items: center;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 	}
 
 	form {
