--- a/css/style.css
+++ b/css/style.css
@@ -193,34 +193,6 @@ nav ul li a i {
 	width: 130px;
 }
 
-/**/
-/*
-#under65 {
-	width: auto;
-	height: 100%;
-}
-
-.under65List {
-	width: auto;
-}
-
-#medicare {
-	width: auto;
-	height: 100%;
-}
-
-.medicareList {
-	width: auto;
-}
-
-#moreInfo {
-	width: auto;
-}
-
-.moreInfoList {
-	width: auto;
-}
-*/
 
 .container {
 	width: 1170px;
@@ -263,20 +235,16 @@ nav ul li a i {
 	 }
 
 	nav p a, nav ul li a, nav ul li ul li a{
-		/*width: 100%;*/
 	  	font-size: 15px;
 		height: 100%;
-		/*padding: 10px 16px;*/
 	}
 
 	nav ul li ul li {
 		width: 100%;
-
 	}
 
 	nav ul li ul li a{
 		font-size: 14px;
-		/*padding: 0;*/
 		width: 100%;
 	}
 
@@ -323,10 +291,7 @@ nav ul li a i {
 	 
 
 	 nav ul li a {
-	/*	font-size: 15px;*/
 		padding: 10px 14px;
-		/*display: flex;
-		justify-content: center;*/
 	}
 
 	#under65 {
@@ -355,7 +320,7 @@ nav ul li a i {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 850px) {
 
 	.toggle {
 		display: -webkit-box;
@@ -368,9 +333,11 @@ nav ul li a i {
 		    -ms-flex-align: center;
 		        align-items: center;
 		width: 100%;
+		
+	}
+
+	.underlineNavTop {
 		border-bottom: 1px white solid;
-		/*height: auto;*/
-		/*isibility: visible;*/
 	}
 
 	.toggle a {
@@ -418,9 +385,25 @@ nav ul li a i {
 
 	}
 
+	nav ul li {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		-ms-align-items: center;
+		align-items: center;
+	}
+
+
 	nav ul li a {
 		font-size: 20px;
 		background-color: #2c6ccc;
+		/*width: 100%;*/
+		text-align: center;
+
+	}
+
+	nav ul li ul li a {
+		text-align: center;
 	}
 
 	nav ul li a:hover {
@@ -475,12 +458,10 @@ nav ul li a i {
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
 		        flex-direction: column;
-		-webkit-box-pack: start;
-		    -ms-flex-pack: start;
-		        justify-content: flex-start;
-		-webkit-box-align: start;
-		    -ms-flex-align: start;
-		        align-items: flex-start;
+
+		        justify-content: center;
+
+		        align-items: center;
 		height: auto;
 	}
 
@@ -507,6 +488,32 @@ nav ul li a i {
 	}
 }
 
+@media only screen and (max-width: 450px) {
+
+	
+	.toggle a {
+
+	  	font-size: 18px;
+
+	}
+
+	.toggle i {
+		font-size: 18px;
+	}
+
+	.active {
+		padding: 0px 10px;
+	}
+
+	nav ul li a {
+		font-size: 18px;	
+	}
+
+
+	nav ul li ul li a{
+		font-size: 16px;
+	}
+}
 
 
 /* - -- - - -- -   Main Content - - -- ---- - - - - -*/
