--- a/css/style3.css
+++ b/css/style3.css
@@ -85,7 +85,7 @@ nav p a{
 	-webkit-box-align: start;
 	    -ms-flex-align: start;
 	        align-items: flex-start;
-
+	width: auto;
 }
 
 
@@ -111,6 +111,9 @@ nav p a{
 
 nav ul li  {
 	list-style: none;
+	height: 100%;
+	/*display: flex;
+	justify-content: center;*/
 }
 
 
@@ -138,17 +141,13 @@ nav ul li:hover {
 	background-color: #154c99;
 }
 
-nav ul li ul {
-	
+nav ul li ul {	
 	border-radius: 0px 0px 10px 10px;
-
 }
 
 nav ul li ul li {
 	width: auto;
 	display: block;
-
-	
 }
 
 nav ul li ul li a{
@@ -207,6 +206,7 @@ nav ul li a i {
 	        justify-content: center;
 }
 
+
 .toggle {
 	width: 100%;
 	padding: 10px 10px;
@@ -221,17 +221,106 @@ nav ul li a i {
 
 .show {
 	display: block;
-	
-
 	background-color: #154c99;
  	border-radius: 0px 0px 10px 10px;
-	
 }
 
 
 /*  - - - --- - -- - -- - - - - -NavBar Responsive Design --- - - - - - - - - - - - - - -- - */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
+
+	.navTopContainer {
+	 	padding: 0% 5%;
+	 }
+
+	nav p a, nav ul li a, nav ul li ul li a{
+	  	font-size: 15px;
+		height: 100%;
+	}
+
+	nav ul li ul li {
+		width: 100%;
+	}
+
+	nav ul li ul li a{
+		font-size: 14px;
+		width: 100%;
+	}
+
+	nav {
+		padding: 0;
+	}
+
+	#under65 {
+		width: 119px;
+	}
+
+	.under65List {
+		width: 180px;
+	}
+
+	#medicare {
+		width: 125px;
+	}
+
+	.medicareList {
+		width: 235px;
+	}
+
+	#moreInfo {
+		width: 125px;
+		height: 100%;
+	}
+
+	.moreInfoList {
+		width: 125px;
+		height: 100%;
+	}
+
+}
+
+@media only screen and (max-width: 1000px) {
+	.navTopContainer {
+	 	padding: 0% 2%;
+	 }
+	
+	nav {
+		height: 43px;
+	}
+	 
+
+	 nav ul li a {
+		padding: 10px 14px;
+	}
+
+	#under65 {
+		width: 110px;
+	}
+
+	.under65List {
+		width: 180px;
+	}
+
+	#medicare {
+		width: 110px;
+	}
+
+	.medicareList {
+		width: 240px;
+	}
+
+	#moreInfo {
+		width: 110px;
+	}
+
+	.moreInfoList {
+		width: 110px;
+	}
+}
+
+
+@media only screen and (max-width: 850px) {
 
 	.toggle {
 		display: -webkit-box;
@@ -244,6 +333,10 @@ nav ul li a i {
 		    -ms-flex-align: center;
 		        align-items: center;
 		width: 100%;
+		
+	}
+
+	.underlineNavTop {
 		border-bottom: 1px white solid;
 	}
 
@@ -292,9 +385,25 @@ nav ul li a i {
 
 	}
 
+	nav ul li {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		-ms-align-items: center;
+		align-items: center;
+	}
+
+
 	nav ul li a {
 		font-size: 20px;
 		background-color: #2c6ccc;
+		/*width: 100%;*/
+		text-align: center;
+
+	}
+
+	nav ul li ul li a {
+		text-align: center;
 	}
 
 	nav ul li a:hover {
@@ -349,12 +458,10 @@ nav ul li a i {
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
 		        flex-direction: column;
-		-webkit-box-pack: start;
-		    -ms-flex-pack: start;
-		        justify-content: flex-start;
-		-webkit-box-align: start;
-		    -ms-flex-align: start;
-		        align-items: flex-start;
+
+		        justify-content: center;
+
+		        align-items: center;
 		height: auto;
 	}
 
@@ -378,6 +485,33 @@ nav ul li a i {
 		list-style-type: square; 
 		content: "❯ ";
   		text-decoration: none;
+	}
+}
+
+@media only screen and (max-width: 450px) {
+
+	
+	.toggle a {
+
+	  	font-size: 18px;
+
+	}
+
+	.toggle i {
+		font-size: 18px;
+	}
+
+	.active {
+		padding: 0px 10px;
+	}
+
+	nav ul li a {
+		font-size: 18px;	
+	}
+
+
+	nav ul li ul li a{
+		font-size: 16px;
 	}
 }
 
